Added 'Consistency' check operation
